--- a/partI.html
+++ b/partI.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>
-Basic I
-</title>
-</head>
-<body>
-<h1>
-What language do you love?
-</h1>
-<p>
-I love HTML!
-</p>
-<h> Changed html partI</h>
-</body>
+    <head>
+        <title>Basic I</title>
+    </head>
+    <body>
+        <h1>What language do you love?</h1>
+        <p>I love HTML!</p>
+    </body>
 </html>
